fixes gap in tabs, adds fa icon to premium button

--- a/app/assets/stylesheets/pages/progress_reports/progress_reports.scss
+++ b/app/assets/stylesheets/pages/progress_reports/progress_reports.scss
@@ -47,7 +47,7 @@
 // The alignment of the link is off when it contains a button.
 a.progress-reports-nav {
   padding-top: 14px !important;
-  padding-bottom: 10px !important;
+  padding-bottom: 15px !important;
 }
 
 
